components/chip/Chip.scss
.Chip-wrapper {
  cursor: text;
  display: flex;
}

.Chip-input {
  outline: none;
  background: none;
  border: none;
}

.Chip {
  display: inline-flex;
  align-items: center;
  background: rgb(224, 224, 224);
  font-size: 13px;
  color: rgba(0, 0, 0, 0.87);
  border-radius: 16px;
  height: 32px;
  margin-right: 5px;
  // this might affect parent component but is required for multi row chips
  margin-bottom: 5px;
}

.Chip:focus {
  color: #fff;
  background-color: rgba(0, 0, 0, 0.54);
  outline: none;
}

.Chip-delete {
  padding: 0;
  border: 0;
  outline: none;
  background: none;
  margin: 0 4px;
}

.Chip svg {
  fill: rgba(0, 0, 0, 0.54);
}

.Chip:focus svg {
  fill: #fff;
}

.Chip-icon {
  width: 32px;
  height: 32px;
}

